Bug#55909 ndb_binlog_index missing entry on normal mysqld shutdown: Added retry during shutdown